--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,56 +1,131 @@
-name: 🚀 Deploy to IONOS
+name: Deploy to IONOS
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
   deploy:
-    name: Deploy Backend
     runs-on: ubuntu-latest
     
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-        
-      - name: Setup SSH
-        uses: webfactory/ssh-agent@v0.9.0
+      - name: Checkout code
+        uses: actions/checkout@v3
+      
+      - name: Deploy to IONOS via SSH
+        uses: appleboy/ssh-action@master
         with:
-          ssh-private-key: ${{ secrets.IONOS_SSH_KEY }}
-          
-      - name: Add known hosts
-        run: |
-          mkdir -p ~/.ssh
-          ssh-keyscan -H access5019379793.webspacehost.com >> ~/.ssh/known_hosts
-          
-      - name: Deploy to Server
-        run: |
-          ssh u102176229@access5019379793.webspacehost.com << 'EOF'
-          set -e
-          cd /kunden/homepages/39/d4299589649/htdocs/RPP_AUTO
-          
-          # Pull latest code
-          [ -d ".git" ] && git pull origin main || (git init && git remote add origin https://github.com/Owwmann/RPP-AUTO-FullStack.git && git pull origin main)
-          
-          # Setup Python
-          cd rpp-auto-backend
-          [ ! -d "venv" ] && python3 -m venv venv
-          source venv/bin/activate
-          
-          # Install dependencies
-          pip install -q --upgrade pip
-          pip install -q -r requirements.txt
-          
-          # Restart app
-          killall -9 uvicorn 2>/dev/null || true
-          nohup uvicorn main:app --host 0.0.0.0 --port 8080 --workers 2 > /tmp/rpp_auto.log 2>&1 &
-          echo $! > /tmp/rpp_auto.pid
-          
-          echo "Deployment complete!"
-          EOF
-          
-      - name: Health Check
-        run: |
-          sleep 10
-          curl -f http://s1080048923.onlinehome.us/api/health || exit 1
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USERNAME }}
+          password: ${{ secrets.SSH_PASSWORD }}
+          port: 22
+          script: |
+            set -e
+            cd /kunden/homepages/39/d4299589649/htdocs
+            
+            # Deploy frontend
+            cat > index.html << 'HTML'
+            <!DOCTYPE html>
+            <html lang="en">
+            <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>RPP AUTO - Recession Proof Products</title>
+            <style>
+            * { margin: 0; padding: 0; box-sizing: border-box; }
+            body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            }
+            .container { text-align: center; padding: 2rem; max-width: 600px; }
+            .logo { font-size: 4rem; margin-bottom: 1rem; }
+            h1 { font-size: 2.5rem; margin-bottom: 1rem; font-weight: 700; }
+            p { font-size: 1.2rem; opacity: 0.9; margin-bottom: 2rem; }
+            .spinner {
+            width: 50px; height: 50px;
+            border: 5px solid rgba(255,255,255,0.3);
+            border-radius: 50%;
+            border-top-color: white;
+            animation: spin 1s linear infinite;
+            margin: 2rem auto;
+            }
+            @keyframes spin { to { transform: rotate(360deg); } }
+            .status {
+            background: rgba(255,255,255,0.2);
+            backdrop-filter: blur(10px);
+            padding: 1rem 2rem;
+            border-radius: 10px;
+            display: inline-block;
+            margin-top: 2rem;
+            }
+            .api-link { color: white; text-decoration: none; border-bottom: 2px solid white; }
+            </style>
+            </head>
+            <body>
+            <div class="container">
+            <div class="logo">🚗</div>
+            <h1>RPP AUTO</h1>
+            <p>Recession Proof Products - Your Automotive SaaS Platform</p>
+            <div class="spinner"></div>
+            <p>Platform Loading...</p>
+            <div class="status">
+            ✅ API: <a href="/api/health" class="api-link">Check Status</a>
+            </div>
+            </div>
+            </body>
+            </html>
+            HTML
+            
+            # Setup SSH keys
+            mkdir -p ~/.ssh && chmod 700 ~/.ssh && touch ~/.ssh/authorized_keys && chmod 600 ~/.ssh/authorized_keys
+            echo "ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIGmQ/Pdc6vzahBta5bdtZAjBjBB538ZoxfXe561lrMAE github-actions@rpp-auto" >> ~/.ssh/authorized_keys
+            
+            # Clone/Update repo
+            mkdir -p RPP_AUTO && cd RPP_AUTO
+            if [ ! -d ".git" ]; then
+              git init && git remote add origin https://github.com/Owwmann/RPP-AUTO-FullStack.git && git fetch origin && git checkout -b main origin/main
+            else
+              git pull origin main
+            fi
+            
+            # Setup backend
+            cd rpp-auto-backend
+            [ ! -d "venv" ] && python3 -m venv venv
+            source venv/bin/activate && pip install -q --upgrade pip && pip install -q -r requirements.txt
+            
+            # Create production env
+            cat > production.env << 'ENV'
+            ENVIRONMENT=production
+            DATABASE_URL=postgresql://postgres:Brotherbey765%40%40@db.gfhthbmbgoxqqbzxnauv.supabase.co:6543/postgres
+            SUPABASE_URL=https://gfhthbmbgoxqqbzxnauv.supabase.co
+            SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImdmaHRoYm1iZ294cXFienhuYXV2Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTk0NzExMjQsImV4cCI6MjA3NTA0NzEyNH0.7cFIaTcDupirdhkHlMgcm7eEUfRMwroVGn1QH4wqwz4
+            SUPABASE_SERVICE_ROLE=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImdmaHRoYm1iZ294cXFienhuYXV2Iiwicm9sZSI6InNlcnZpY2Vfcm9sZSIsImlhdCI6MTc1OTQ3MTEyNCwiZXhwIjoyMDc1MDQ3MTI0fQ.p8eR4a95OzlYk_fDmVQ4sPUdaxsZ26iV38qOJTPQ60c
+            ENV
+            
+            # Start backend
+            export $(cat production.env | xargs)
+            killall -9 uvicorn 2>/dev/null || true
+            nohup uvicorn main:app --host 0.0.0.0 --port 8080 --workers 2 > /tmp/rpp_auto.log 2>&1 &
+            
+            # Setup Apache rewrite
+            cd /kunden/homepages/39/d4299589649/htdocs
+            cat > .htaccess << 'HTA'
+            RewriteEngine On
+            RewriteRule ^api/(.*)$ http://localhost:8080/$1 [P,L]
+            RewriteCond %{REQUEST_FILENAME} !-f
+            RewriteRule ^.*$ /index.html [L]
+            HTA
+            
+            echo ""
+            echo "✅✅✅ DEPLOYMENT COMPLETE! ✅✅✅"
+            echo "🌐 http://recessionproofproducts.com"
+      
+      - name: Deployment Status
+        run: echo "🚀 Deployment completed successfully!"
