--- a/mobile/package.json
+++ b/mobile/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "build:android": "eas build --platform android"
+    "build:android": "eas build --platform android",
+    "comment": "Flipper is automatically excluded in production builds"
   },
   "dependencies": {
     "expo": "~51.0.0",
@@ -27,6 +28,12 @@
     "@stripe/stripe-react-native": "^0.37.0",
     "react-native-vector-icons": "^10.0.3",
     "expo-linear-gradient": "~13.0.2",
-    "react-native-svg": "15.2.0"
+    "react-native-svg": "15.2.0",
+    "expo-sqlite": "~14.0.3",
+    "expo-file-system": "~17.0.1",
+    "expo-build-properties": "~0.12.1"
+  },
+  "devDependencies": {
+    "react-native-flipper": "^0.212.0"
   }
 }
